[package]
name = "fuzz"
version = "0.0.1"
authors = ["Erin Power <xampprocky@gmail.com>"]
edition = "2018"
description = "Something someday."
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[dependencies]
rasn = { path = "..", default-features = false }
#rasn-snmp = { path = "../standards/snmp" }
rasn-smi = { path = "../standards/smi" }
afl = "0.15.5"
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.75"
pretty_assertions = "1.4.0"
log = { version = "0.4.21", features = ["kv"] }
libfuzzer-sys = "0.4"

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "fuzz_target_1"
path = "src/bin/fuzz_target_1.rs"
test = false
doc = false
bench = false
